--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "77ae386e-bde6-49b0-bd6e-9c07e8aee685"
 authors = ["Santiago Badia"]
 version = "0.1.0"
 
+[deps]
+Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
 julia = "1"
 
