--- a/src/zygote_gridap_example/Project.toml
+++ b/src/zygote_gridap_example/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
