--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "GridapGeosciences"
 uuid = "77ae386e-bde6-49b0-bd6e-9c07e8aee685"
-authors = ["Santiago Badia"]
+authors = ["Santiago Badia", "Alberto F. Martin"]
 version = "0.1.0"
 
 [deps]
@@ -9,7 +9,8 @@ LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1"
+Gridap = "0.16"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
