--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,13 @@ authors = ["Santiago Badia", "Alberto F. Martin"]
 version = "0.1.0"
 
 [deps]
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-Gridap = "0.16"
 julia = "1.3"
 
 [extras]
