--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,8 @@ jobs:
              --download-ptscotch --with-debugging --with-x=0 --with-shared=1 \
              --with-mpi=1 --with-64-bit-indices
           make
-          make install      
+          make install  
+      - run: find /opt/petsc/3.15.4/lib/    
       - run: julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
       - run: julia --project=. --color=yes --check-bounds=yes test/mpi/runtests.jl
       - uses: julia-actions/julia-processcoverage@v1
