--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
-Gridap = "0.17.2"
-SparseMatricesCSR = "0.6.2"
+SparseMatricesCSR = "0.6.6"
 julia = "1.5"
+GridapDistributed="0.2.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
