--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,10 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - run: |
-          julia --color=yes --project=. --check-bounds=yes --depwarn=error -e '
+          julia --color=yes --project=. --check-bounds=yes -e '
             using Pkg; Pkg.instantiate()'
       - run: |
-          julia -O1 --color=yes --project=. --check-bounds=yes --depwarn=error -e '
+          julia -O1 --color=yes --project=. --check-bounds=yes -e '
             include("test/runtests.jl")'  
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
