Changes requires to have a working GalewskyShallowWaterThetaMethod

--- a/driver/mpi/GalewskyShallowWaterThetaMethod/Project.toml
+++ b/driver/mpi/GalewskyShallowWaterThetaMethod/Project.toml
@@ -11,6 +11,7 @@ GridapGeosciences = "77ae386e-bde6-49b0-bd6e-9c07e8aee685"
 GridapP4est = "c2c8e14b-f5fd-423d-9666-1dd9ad120af9"
 GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 PartitionedArrays = "5a9dfac6-5c52-46f7-8278-5e2210713be9"
 SparseMatricesCSR = "a0a7dd2c-ebf4-11e9-1f05-cf50bc540ca1"
