--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 GridapDistributed = "f9701e48-63b3-45aa-9a63-9bc6c271f355"
 GridapP4est = "c2c8e14b-f5fd-423d-9666-1dd9ad120af9"
 GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
+GridapPardiso = "34aa2546-dee6-11e9-014e-739fa02ec06f"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -29,6 +30,7 @@ Gridap = "0.18.0"
 GridapDistributed = "0.4"
 GridapP4est = "0.3.6"
 GridapPETSc = "0.5.2"
+GridapPardiso = "0.7.0"
 MPI = "0.20"
 PartitionedArrays = "0.3.4"
 SparseMatricesCSR = "0.6.6"
