--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Santiago Badia <santiago.badia@monash.edu>", "Christopher Bladwell <
 version = "0.5.0"
 
 [deps]
+BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
@@ -11,7 +12,6 @@ Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 GridapDistributed = "f9701e48-63b3-45aa-9a63-9bc6c271f355"
 GridapP4est = "c2c8e14b-f5fd-423d-9666-1dd9ad120af9"
 GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
-GridapPardiso = "34aa2546-dee6-11e9-014e-739fa02ec06f"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -30,7 +30,6 @@ Gridap = "0.18.0"
 GridapDistributed = "0.4"
 GridapP4est = "0.3.9"
 GridapPETSc = "0.5.2"
-GridapPardiso = "0.7.0"
 MPI = "0.20"
 PartitionedArrays = "0.3.4"
 SparseMatricesCSR = "0.6.6"
