--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ GridapP4est = "c2c8e14b-f5fd-423d-9666-1dd9ad120af9"
 GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 P4est_wrapper = "3743d7c0-8adf-11ea-380b-7d33b0ecc1da"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
