--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ Gridap = "0.18.0"
 GridapDistributed = "0.4"
 GridapP4est = "0.3.9"
 GridapPETSc = "0.5.2"
+GridapSolvers = "0.4.2"
 MPI = "0.20"
 PartitionedArrays = "0.3.4"
 SparseMatricesCSR = "0.6.6"
